<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <TextView
            android:id="@+id/tv_detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="@dimen/padding_large"
            android:text="@string/detail_title"
            android:textSize="@dimen/text_size_display1"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/padding_medium"
            android:paddingRight="@dimen/padding_medium">

            <ImageView
                android:id="@+id/tv_detail_poster"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:layout_weight="1"
                android:contentDescription="@string/detail_poster_description"
                android:src="@drawable/posterplaceholder" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingRight="@dimen/padding_medium">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_overview_title"
                    android:textSize="@dimen/text_size_subheading" />

                <TextView
                    android:id="@+id/tv_detail_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_overview_default"
                    android:textSize="@dimen/text_size_body1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_large"
                    android:text="@string/detail_rating_title"
                    android:textSize="@dimen/text_size_subheading" />

                <TextView
                    android:id="@+id/tv_detail_rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_rating_default"
                    android:textSize="@dimen/text_size_body1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_large"
                    android:text="@string/detail_release_title"
                    android:textSize="@dimen/text_size_subheading" />

                <TextView
                    android:id="@+id/tv_detail_release"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_release_default"
                    android:textSize="@dimen/text_size_body1" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>